[project]
name = "symbolic-liquefaction"
version = "0.1.0"
description = "Symbolic AI regression for energy-based liquefaction."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "box-sdk-gen"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
packages = ["src"]

[tool.uv]
package = true